tests/snapshots/yaml_suite_snapshots__yaml_suite_S3PD_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- emit: "plain key: in-line value\n:\n\"quoted key\":\n- entry\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2798896"
  name: Spec Example 8.18. Implicit Block Mapping Entries
  tags: empty-key spec mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :plain key\n   =VAL :in-line value\n   =VAL :\n   =VAL :\n   =VAL \"quoted key\n   +SEQ\n    =VAL :entry\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "plain key: in-line value\n: # Both empty\n\"quoted key\":\n- entry\n"
