tests/snapshots/yaml_suite_snapshots__yaml_suite_S4GJ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid text after block scalar indicator
  from: "@perlpunk"
  tags: error folded
  fail: true
  yaml: "---\nfolded: > first line\n  second line\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :folded\n"
