tests/snapshots/yaml_suite_snapshots__yaml_suite_S4GJ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid text after block scalar indicator
  tags: error folded
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :folded\n"
  yaml: "---\nfolded: > first line\n  second line\n"
