tests/snapshots/yaml_suite_snapshots__yaml_suite_S4JQ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- \"12\"\n- 12\n- ! 12\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2785512"
  json: "[\n  \"12\",\n  12,\n  \"12\"\n]\n"
  name: Spec Example 6.28. Non-Specific Tags
  tags: spec tag
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL \"12\n   =VAL :12\n   =VAL <!> :12\n  -SEQ\n -DOC\n-STR\n"
  yaml: "# Assuming conventional resolution:\n- \"12\"\n- 12\n- ! 12\n"
