tests/snapshots/yaml_suite_snapshots__yaml_suite_S4T7_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Document with footer
  from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/footer.tml"
  tags: mapping footer
  yaml: "aaa: bbb\n...\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :aaa\n   =VAL :bbb\n  -MAP\n -DOC ...\n-STR\n"
  json: "{\n  \"aaa\": \"bbb\"\n}\n"
